--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Nginx Website</title>
+  <title>Welcome to My First Nginx Website🎉</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <h1>Welcome to My Website 🎉</h1>
+  <h1>My Website Has Been Updated!🚀</h1>
   <p>This website is hosted using Nginx and GitHub integration.🌐</p>
 </body>
 </html>
