Feat: Confirm auto-deployment is working

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Welcome to My First Nginx Website🎉</title>
   <link rel="stylesheet" href="style.css">
   
-  <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/354115/nginx.svg">
+  <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/354114/nginx.svg">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <h1>My Website Has Been Updated!🚀</h1>
+  <h1>Automated Deployment is Live! 🚀</h1>
   <p>This website is hosted using Nginx and GitHub integration.🌐</p>
 </body>
 </html>
